# cs420_project

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  main.cpp  test.py
omp_mpi_implementations/: mpiCholesky  mpiCholesky.cpp  ompCholesky  ompCholesky.cpp  serialCholesky  serialCholesky.cpp
scripts/: generate_submit_scripts.py  submit_batch.sh
utils/: CMakeLists.txt  cholesky.cpp  cholesky.hpp  utils.cpp  utils.hpp
